--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "sinon": "^1.13.0",
     "socket.io": "^1.3.4",
     "socket.io-client": "^1.3.5",
-    "supertest": "^0.15.0"
+    "supertest": "^0.15.0",
+    "supertest-as-promised": "^4.0.0",
+    "supertest-promised": "^1.0.0"
   }
 }
