--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
+    "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
     "karma": "^0.13.14",
