--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chalk": "^1.0.0",
     "connect-session-sequelize": "^3.0.0",
     "cookie-parser": "^1.3.4",
+    "csshake": "^1.5.0",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
     "font-awesome": "^4.6.3",
@@ -54,6 +55,7 @@
     "karma-mocha": "^0.1.10",
     "karma-mocha-reporter": "^1.0.2",
     "lodash": "^3.9.3",
+    "magic.css": "^1.1.0",
     "ng-autofocus": "0.0.23",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
