--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
+    "jquery": "^3.1.1",
     "karma": "^0.13.14",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "0.2.3",
@@ -65,6 +66,7 @@
     "passport-twitter": "^1.0.2",
     "pg": "^4.5.5",
     "pg-hstore": "^2.3.2",
+    "phaser": "^2.6.2",
     "run-sequence": "^1.0.2",
     "sequelize": "^3.23.3",
     "serve-favicon": "^2.2.0",
