--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "angular-mocks": "^1.4.0",
     "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.6.0",
     "bluebird": "^3.3.3",
@@ -48,6 +50,7 @@
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
+    "gulp-webpack": "^1.5.0",
     "jquery": "^3.1.1",
     "karma": "^0.13.14",
     "karma-chai": "^0.1.0",
@@ -57,6 +60,7 @@
     "karma-mocha-reporter": "^1.0.2",
     "lodash": "^3.9.3",
     "magic.css": "^1.1.0",
+    "ng-annotate-loader": "^0.2.0",
     "ng-autofocus": "0.0.23",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
@@ -75,6 +79,8 @@
     "socket.io-client": "^1.3.5",
     "supertest": "^0.15.0",
     "supertest-as-promised": "^4.0.0",
-    "supertest-promised": "^1.0.0"
+    "supertest-promised": "^1.0.0",
+    "webpack": "^1.13.2",
+    "webpack-stream": "^3.2.0"
   }
 }
