--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap-social": "^5.0.0",
     "chai": "^2.1.0",
     "chalk": "^1.0.0",
+    "compression": "^1.6.2",
     "connect-session-sequelize": "^3.0.0",
     "cookie-parser": "^1.3.4",
     "csshake": "^1.5.0",
